# subauto

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: release.yaml  test.yaml
subauto/: cli.py
subauto/config/: api_manager.py  settings.py
subauto/exceptions/: api_manager.py  base.py  conversion.py  gemini.py
subauto/models/: progress.py
subauto/utils/: logging.py  utils.py
tests/: test_api_manager.py
